--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Treat Template
-url: "https://spring-bat.cloudvent.net/"
+url: "https://aronmoon.com"
 baseurl:
 google_analytics_key:
 newsletter_action:
